# nukie-protocol

./: .gitignore  DEVELOPMENT_ROADMAP.md  LICENSE  README.md  SECURITY.md  gui.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  shell.nix
.github/: dependabot.yml
.github/workflows/: mobile-tests.yml  python-tests.yml
mobile/: App.js  app.json  identity.js  index.js  jest.config.js  jest.setup.js  package-lock.json  package.json
mobile/__tests__/: cryptography.test.js  cryptographySrc.test.js  identity.test.js
mobile/src/screens/: BlueskyAuth.tsx  TikTokFeed.tsx
mobile/utils/identity/: cryptography.js
src/: __init__.py  identity.py
src/utils/identity/: cryptography.js
tests/: test_cli.py  test_identity.py
web/: index.html
web-app/: package-lock.json  package.json  tailwind.config.js
web-app/src/: App.jsx  index.css
web-app/src/components/layout/: Navbar.jsx
web-app/src/components/ui/: Button.jsx  Card.jsx
web-app/src/context/: AuthContext.jsx  SocialContext.jsx
web-app/src/pages/: AuthPage.jsx  HomePage.jsx  ProfilePage.jsx  TimelinePage.jsx
